Fixed sidenav bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,7 @@ li a:hover {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 270px;
+    display: block !important;
   }
   .sidenav a {
     padding: 8px 8px 8px 32px;
